Fix overflow hiding "explore" options

--- a/ckanext/edawax/theme/changes.css
+++ b/ckanext/edawax/theme/changes.css
@@ -767,7 +767,7 @@ div.nums{
 }
 
 /************** START Resource Panel ******************/
-.resource-list{
+.download_all_wrapper{
     overflow: hidden;
 }
 
